--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile 'org.asynchttpclient:async-http-client:2.0.37'
 
     compile 'ch.qos.logback:logback-classic:1.2.3'
+
+    // simple REST support so that we can test the client
+    compile 'org.jboss.resteasy:resteasy-servlet-initializer:3.1.3.Final'
 }
 
 kotlin {
