--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.2.10"
+    id "org.jetbrains.kotlin.jvm" version "1.2.21"
     // need to use Gretty here because of https://github.com/johndevs/gradle-vaadin-plugin/issues/317
     id "org.akhikhl.gretty" version "2.0.0"
     id 'com.devsoap.plugin.vaadin' version '1.2.6'
@@ -10,7 +10,7 @@ gretty {
 }
 
 vaadin {
-    version '8.2.0'
+    version '8.3.0'
 }
 
 defaultTasks 'clean', 'build'
@@ -21,10 +21,10 @@ repositories {
 
 dependencies {
     // Karibu-DSL dependency
-    compile 'com.github.vok.karibudsl:karibu-dsl-v8:0.2.14'
+    compile 'com.github.vok.karibudsl:karibu-dsl-v8:0.2.21'
 
     // include proper kotlin version
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.10'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.21'
 
     // workaround until https://youtrack.jetbrains.com/issue/IDEA-178071 is fixed
     compile "com.vaadin:vaadin-themes:${vaadin.version}"
@@ -33,7 +33,7 @@ dependencies {
     // since we're using async stuff, we need to push updated UI to the client
     compile "com.vaadin:vaadin-push:${vaadin.version}"
     // adds support for cancelable coroutines
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.1'
     // a http client which does not block
     compile 'org.asynchttpclient:async-http-client:2.0.37'
 
