--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.21"
     // need to use Gretty here because of https://github.com/johndevs/gradle-vaadin-plugin/issues/317
     id "org.akhikhl.gretty" version "2.0.0"
-    id 'com.devsoap.plugin.vaadin' version '1.2.6'
+    id 'com.devsoap.plugin.vaadin' version '1.3.1'
 }
 
 gretty {
@@ -41,6 +41,9 @@ dependencies {
 
     // simple REST support so that we can test the client
     compile 'org.jboss.resteasy:resteasy-servlet-initializer:3.1.3.Final'
+
+    // heroku app runner
+    providedRuntime 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
 kotlin {
@@ -48,3 +51,25 @@ kotlin {
         coroutines "enable"
     }
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+// Heroku
+task stage(dependsOn: ['build'])
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.providedRuntime) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
