--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.40"
     // need to use Gretty here because of https://github.com/johndevs/gradle-vaadin-plugin/issues/317
-    id "org.akhikhl.gretty" version "2.0.0"
+    id "org.gretty" version "2.1.0"
     id 'com.devsoap.plugin.vaadin' version '1.3.1'
 }
 
@@ -43,7 +43,7 @@ dependencies {
     compile 'org.jboss.resteasy:resteasy-servlet-initializer:3.1.3.Final'
 
     // heroku app runner
-    testRuntime 'com.github.jsimone:webapp-runner:8.5.11.3'
+    testRuntime 'com.github.jsimone:webapp-runner:8.5.30.0'
 }
 
 kotlin {
