--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.2.70"
+    id "org.jetbrains.kotlin.jvm" version "1.2.71"
     // need to use Gretty here because of https://github.com/johndevs/gradle-vaadin-plugin/issues/317
     id "org.gretty" version "2.1.0"
     id 'com.devsoap.plugin.vaadin' version '1.3.1'
@@ -10,18 +10,18 @@ gretty {
 }
 
 vaadin {
-    version '8.5.1'
+    version '8.5.2'
 }
 
 defaultTasks 'clean', 'build'
 
 repositories {
-    maven { url "https://dl.bintray.com/mvysny/github" }
+    jcenter()
 }
 
 dependencies {
     // Karibu-DSL dependency
-    compile 'com.github.vok.karibudsl:karibu-dsl-v8:0.4.8'
+    compile 'com.github.vok.karibudsl:karibu-dsl-v8:0.4.10'
 
     // include proper kotlin version
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
