--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.71"
     // need to use Gretty here because of https://github.com/johndevs/gradle-vaadin-plugin/issues/317
-    id "org.gretty" version "2.1.0"
+    id "org.gretty" version "2.2.0"
     id 'com.devsoap.plugin.vaadin' version '1.3.1'
 }
 
 gretty {
     contextPath = '/'
+    servletContainer = 'jetty9.4'
 }
 
 vaadin {
