--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.5.1",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-grid": "5.7.7",
+      "@vaadin/vaadin-grid": "5.7.14",
       "@vaadin/vaadin-icons": "4.3.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.7",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.7",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "2.4.0",
+      "@vaadin/vaadin-select": "2.4.1",
       "@vaadin-component-factory/vcf-progress-spinner": "1.0.1",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
@@ -24,22 +24,24 @@
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-menu-bar": "1.2.1",
-      "@vaadin/vaadin-text-field": "2.8.2",
-      "@vaadin/vaadin-custom-field": "1.3.0",
+      "@vaadin/vaadin-menu-bar": "1.2.2",
+      "@vaadin/vaadin-text-field": "2.8.5",
+      "@vaadin/vaadin-custom-field": "1.3.1",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-accordion": "1.2.0",
       "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.0",
+      "@vaadin/vaadin-checkbox": "2.5.1",
       "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
       "@vaadin/vaadin-time-picker": "2.4.0",
       "@vaadin/vaadin-context-menu": "4.5.0",
       "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
+      "@vaadin/vaadin-radio-button": "1.5.2",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "lit-html": "1.4.1",
+      "@vaadin/vaadin-avatar": "1.0.4"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -50,22 +52,30 @@
       "webpack": "4.42.0",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0"
+      "webpack-dev-server": "3.11.0",
+      "css-loader": "4.2.1",
+      "file-loader": "6.1.0",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "lit-css-loader": "0.0.4",
+      "construct-style-sheets-polyfill": "2.4.6",
+      "ts-loader": "8.0.12",
+      "typescript": "4.0.3",
+      "extract-loader": "5.1.0"
     },
-    "hash": "81e4e85e9dc7a45e5a41450097efe6d283d7e2067abc020c2b0b385d9e82135e"
+    "hash": "001907796ccaa76804212c6a8725341b2c7d1086023c2e8486bad05e1f1e43ad"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
+    "lit-element": "2.5.1",
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/vaadin-grid": "5.7.7",
+    "@vaadin/vaadin-grid": "5.7.14",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.7",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.7",
     "@vaadin/vaadin-upload": "4.4.1",
     "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-select": "2.4.1",
     "@vaadin/vaadin-app-layout": "2.2.0",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-notification": "1.6.1",
@@ -75,22 +85,24 @@
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
-    "@vaadin/vaadin-text-field": "2.8.2",
-    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-menu-bar": "1.2.2",
+    "@vaadin/vaadin-text-field": "2.8.5",
+    "@vaadin/vaadin-custom-field": "1.3.1",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-checkbox": "2.5.1",
     "@vaadin/vaadin-details": "1.2.0",
     "@polymer/iron-icon": "3.0.1",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
+    "@vaadin/vaadin-radio-button": "1.5.2",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "lit-html": "1.4.1",
+    "@vaadin/vaadin-avatar": "1.0.4"
   },
   "devDependencies": {
     "webpack-babel-multi-target-plugin": "2.3.3",
@@ -101,6 +113,14 @@
     "webpack": "4.42.0",
     "chokidar": "^3.5.0",
     "webpack-merge": "4.2.2",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "css-loader": "4.2.1",
+    "file-loader": "6.1.0",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "lit-css-loader": "0.0.4",
+    "construct-style-sheets-polyfill": "2.4.6",
+    "ts-loader": "8.0.12",
+    "typescript": "4.0.3",
+    "extract-loader": "5.1.0"
   }
 }
