--- a/package.json
+++ b/package.json
@@ -3,61 +3,76 @@
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-avatar": "1.0.4",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.1",
-    "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.7.2",
-    "@vaadin/vaadin-custom-field": "1.3.1",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/vaadin-details": "1.2.0",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-grid": "5.8.4",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.1",
-    "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-menu-bar": "1.2.2",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-radio-button": "1.5.4",
-    "@vaadin/vaadin-select": "2.4.1",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-text-field": "2.8.5",
-    "@vaadin/vaadin-time-picker": "2.4.0",
-    "@vaadin/vaadin-upload": "4.4.2",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "2.5.1",
-    "lit-html": "1.4.1",
-    "@vaadin/vaadin-messages": "1.0.1"
+    "@vaadin/flow-frontend": "./build/flow-frontend",
+    "@vaadin/form": "./build/flow-frontend/form",
+    "@vaadin/router": "1.7.4",
+    "@vaadin/vaadin-accordion": "21.0.3",
+    "@vaadin/vaadin-app-layout": "21.0.3",
+    "@vaadin/vaadin-avatar": "21.0.3",
+    "@vaadin/vaadin-button": "21.0.3",
+    "@vaadin/vaadin-checkbox": "21.0.3",
+    "@vaadin/vaadin-combo-box": "21.0.3",
+    "@vaadin/vaadin-context-menu": "21.0.3",
+    "@vaadin/vaadin-core-shrinkwrap": "21.0.4",
+    "@vaadin/vaadin-custom-field": "21.0.3",
+    "@vaadin/vaadin-date-picker": "21.0.3",
+    "@vaadin/vaadin-date-time-picker": "21.0.3",
+    "@vaadin/vaadin-details": "21.0.3",
+    "@vaadin/vaadin-dialog": "21.0.3",
+    "@vaadin/vaadin-form-layout": "21.0.3",
+    "@vaadin/vaadin-grid": "21.0.3",
+    "@vaadin/vaadin-icon": "21.0.3",
+    "@vaadin/vaadin-icons": "21.0.3",
+    "@vaadin/vaadin-item": "21.0.3",
+    "@vaadin/vaadin-list-box": "21.0.3",
+    "@vaadin/vaadin-login": "21.0.3",
+    "@vaadin/vaadin-lumo-styles": "21.0.3",
+    "@vaadin/vaadin-material-styles": "21.0.3",
+    "@vaadin/vaadin-menu-bar": "21.0.3",
+    "@vaadin/vaadin-messages": "21.0.3",
+    "@vaadin/vaadin-notification": "21.0.3",
+    "@vaadin/vaadin-ordered-layout": "21.0.3",
+    "@vaadin/vaadin-progress-bar": "21.0.3",
+    "@vaadin/vaadin-radio-button": "21.0.3",
+    "@vaadin/vaadin-select": "21.0.3",
+    "@vaadin/vaadin-split-layout": "21.0.3",
+    "@vaadin/vaadin-tabs": "21.0.3",
+    "@vaadin/vaadin-template-renderer": "21.0.3",
+    "@vaadin/vaadin-text-field": "21.0.3",
+    "@vaadin/vaadin-time-picker": "21.0.3",
+    "@vaadin/vaadin-upload": "21.0.3",
+    "@vaadin/vaadin-virtual-list": "21.0.3",
+    "construct-style-sheets-polyfill": "3.0.4",
+    "lit": "2.0.0"
   },
   "devDependencies": {
+    "@types/validator": "13.1.0",
+    "@vaadin/application-theme-plugin": "./build/plugins/application-theme-plugin",
+    "@vaadin/stats-plugin": "./build/plugins/stats-plugin",
+    "@vaadin/theme-live-reload-plugin": "./build/plugins/theme-live-reload-plugin",
+    "@vaadin/theme-loader": "./build/plugins/theme-loader",
     "chokidar": "^3.5.0",
     "compression-webpack-plugin": "4.0.1",
-    "construct-style-sheets-polyfill": "2.4.6",
-    "copy-webpack-plugin": "5.1.2",
     "css-loader": "4.2.1",
     "extra-watch-webpack-plugin": "1.0.3",
     "extract-loader": "5.1.0",
-    "file-loader": "6.1.0",
-    "lit-css-loader": "0.0.4",
-    "raw-loader": "3.1.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
+    "glob": "7.1.6",
+    "html-webpack-plugin": "4.5.1",
+    "lit-css-loader": "0.1.0",
+    "loader-utils": "2.0.0",
     "ts-loader": "8.0.12",
-    "typescript": "4.0.3",
-    "webpack": "4.42.0",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "webpack-cli": "3.3.11",
+    "typescript": "4.3.3",
+    "validator": "13.1.17",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack-manifest-plugin": "3.0.0",
+    "webpack-merge": "4.2.2",
+    "workbox-core": "6.2.0",
+    "workbox-precaching": "6.2.0",
+    "workbox-webpack-plugin": "6.2.0"
   },
   "license": "UNLICENSED",
   "name": "no-name",
@@ -67,63 +82,71 @@
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
       "@vaadin-component-factory/vcf-progress-spinner": "1.0.1",
-      "@vaadin/vaadin-accordion": "1.2.0",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-avatar": "1.0.4",
-      "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.1",
-      "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-context-menu": "4.5.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.7.2",
-      "@vaadin/vaadin-custom-field": "1.3.1",
-      "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-date-time-picker": "1.4.0",
-      "@vaadin/vaadin-details": "1.2.0",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-form-layout": "2.3.0",
-      "@vaadin/vaadin-grid": "5.8.4",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-item": "2.3.0",
-      "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-login": "1.2.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.1",
-      "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-menu-bar": "1.2.2",
-      "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-radio-button": "1.5.4",
-      "@vaadin/vaadin-select": "2.4.1",
-      "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-text-field": "2.8.5",
-      "@vaadin/vaadin-time-picker": "2.4.0",
-      "@vaadin/vaadin-upload": "4.4.2",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
-      "construct-style-sheets-polyfill": "2.4.16",
-      "lit-element": "2.5.1",
-      "lit-html": "1.4.1",
-      "@vaadin/vaadin-messages": "1.0.1"
+      "@vaadin/router": "1.7.4",
+      "@vaadin/vaadin-accordion": "21.0.3",
+      "@vaadin/vaadin-app-layout": "21.0.3",
+      "@vaadin/vaadin-avatar": "21.0.3",
+      "@vaadin/vaadin-button": "21.0.3",
+      "@vaadin/vaadin-checkbox": "21.0.3",
+      "@vaadin/vaadin-combo-box": "21.0.3",
+      "@vaadin/vaadin-context-menu": "21.0.3",
+      "@vaadin/vaadin-core-shrinkwrap": "21.0.4",
+      "@vaadin/vaadin-custom-field": "21.0.3",
+      "@vaadin/vaadin-date-picker": "21.0.3",
+      "@vaadin/vaadin-date-time-picker": "21.0.3",
+      "@vaadin/vaadin-details": "21.0.3",
+      "@vaadin/vaadin-dialog": "21.0.3",
+      "@vaadin/vaadin-form-layout": "21.0.3",
+      "@vaadin/vaadin-grid": "21.0.3",
+      "@vaadin/vaadin-icon": "21.0.3",
+      "@vaadin/vaadin-icons": "21.0.3",
+      "@vaadin/vaadin-item": "21.0.3",
+      "@vaadin/vaadin-list-box": "21.0.3",
+      "@vaadin/vaadin-login": "21.0.3",
+      "@vaadin/vaadin-lumo-styles": "21.0.3",
+      "@vaadin/vaadin-material-styles": "21.0.3",
+      "@vaadin/vaadin-menu-bar": "21.0.3",
+      "@vaadin/vaadin-messages": "21.0.3",
+      "@vaadin/vaadin-notification": "21.0.3",
+      "@vaadin/vaadin-ordered-layout": "21.0.3",
+      "@vaadin/vaadin-progress-bar": "21.0.3",
+      "@vaadin/vaadin-radio-button": "21.0.3",
+      "@vaadin/vaadin-select": "21.0.3",
+      "@vaadin/vaadin-split-layout": "21.0.3",
+      "@vaadin/vaadin-tabs": "21.0.3",
+      "@vaadin/vaadin-template-renderer": "21.0.3",
+      "@vaadin/vaadin-text-field": "21.0.3",
+      "@vaadin/vaadin-time-picker": "21.0.3",
+      "@vaadin/vaadin-upload": "21.0.3",
+      "@vaadin/vaadin-virtual-list": "21.0.3",
+      "construct-style-sheets-polyfill": "3.0.4",
+      "lit": "2.0.0"
     },
     "devDependencies": {
+      "@types/validator": "13.1.0",
       "chokidar": "^3.5.0",
       "compression-webpack-plugin": "4.0.1",
-      "construct-style-sheets-polyfill": "2.4.6",
-      "copy-webpack-plugin": "5.1.2",
       "css-loader": "4.2.1",
       "extra-watch-webpack-plugin": "1.0.3",
       "extract-loader": "5.1.0",
-      "file-loader": "6.1.0",
-      "lit-css-loader": "0.0.4",
-      "raw-loader": "3.1.0",
+      "file-loader": "6.2.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1",
+      "glob": "7.1.6",
+      "html-webpack-plugin": "4.5.1",
+      "lit-css-loader": "0.1.0",
+      "loader-utils": "2.0.0",
       "ts-loader": "8.0.12",
-      "typescript": "4.0.3",
-      "webpack": "4.42.0",
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "webpack-cli": "3.3.11",
+      "typescript": "4.3.3",
+      "validator": "13.1.17",
+      "webpack": "4.46.0",
+      "webpack-cli": "3.3.12",
       "webpack-dev-server": "3.11.0",
-      "webpack-merge": "4.2.2"
+      "webpack-manifest-plugin": "3.0.0",
+      "webpack-merge": "4.2.2",
+      "workbox-core": "6.2.0",
+      "workbox-precaching": "6.2.0",
+      "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "c04daa00ecefc8bfbe64a743896828386f100d8a0a0bef186158fd283612039f"
+    "hash": "5a595d5f69d388c3afe9cba090c1df24f941e613765a9244d1ec6393cdbade8c"
   }
 }
