--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,13 +9,12 @@ slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 jetbrains-annotations = "org.jetbrains:annotations:24.1.0"
 vaadin-boot = "com.github.mvysny.vaadin-boot:vaadin-boot:12.2"
 vaadin-core = { module = "com.vaadin:vaadin-core", version.ref = "vaadin" }
-junit-jupiter-engine = "org.junit.jupiter:junit-jupiter-engine:5.10.2"
-junit-platform-launcher = "org.junit.platform:junit-platform-launcher:1.10.2"
 karibu-testing = "com.github.mvysny.kaributesting:karibu-testing-v24:2.1.2"
 karibu-dsl = "com.github.mvysny.karibudsl:karibu-dsl-v23:2.1.2"
 # https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-coroutines-core/
 kotlinx-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 dynatest = "com.github.mvysny.dynatest:dynatest:0.24"
+javalin = "io.javalin:javalin:5.6.2"
 
 [plugins]
 vaadin = { id = "com.vaadin", version.ref = "vaadin" }
