--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ karibu-dsl = "com.github.mvysny.karibudsl:karibu-dsl-v23:2.1.3"
 kotlinx-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
 dynatest = "com.github.mvysny.dynatest:dynatest:0.25"
 javalin = "io.javalin:javalin:5.6.2"
+junit-platform-launcher = "org.junit.platform:junit-platform-launcher:1.10.2"
 
 [plugins]
 vaadin = { id = "com.vaadin", version.ref = "vaadin" }
