--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,9 +13,8 @@ karibu-testing = "com.github.mvysny.kaributesting:karibu-testing-v24:2.1.5"
 karibu-dsl = "com.github.mvysny.karibudsl:karibu-dsl-v23:2.1.3"
 # https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-coroutines-core/
 kotlinx-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
-dynatest = "com.github.mvysny.dynatest:dynatest:0.25"
+junit = "org.junit.jupiter:junit-jupiter-engine:5.11.0"
 javalin = "io.javalin:javalin:5.6.2"
-junit-platform-launcher = "org.junit.platform:junit-platform-launcher:1.10.2"
 
 [plugins]
 vaadin = { id = "com.vaadin", version.ref = "vaadin" }
